# arla

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  conftest.py  create.py  debug_experiment.py  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-local.txt  requirements.txt  run_local.py  schelling_sim_context.txt  scratch.md  sitemap.xml  stuff.py  test_schelling_import.py
agent-concurrent/: .gitignore  pyproject.toml  requirements-dev.txt
agent-concurrent/rust/: Cargo.toml
agent-concurrent/rust/src/: lib.rs
agent-concurrent/src/agent_concurrent/: __init__.py  runners.py
agent-concurrent/tests/: test_runners.py
agent-core/: .coveragerc  (+4 more)
agent-engine/: DEVELOPER_GUIDE.md  pyproject.toml  requirements-dev.txt
agent-engine/docs/: decoupling_affect.md
agent-engine/src/agent_engine/: conftest.py
agent-engine/src/agent_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-engine/src/agent_engine/cognition/emotions/: affect_base.py  affect_learning.py  appraisal_theory.py  model.py
agent-engine/src/agent_engine/cognition/identity/: domain_identity.py
agent-engine/src/agent_engine/cognition/reflection/: counterfactual.py  episode.py  validation.py
agent-engine/src/agent_engine/logging/: emitter_interface.py  exporter_interface.py  metrics_calculator_interface.py  metrics_exporter_interface.py
agent-engine/src/agent_engine/persistence/: snapshot_manager.py
agent-engine/src/agent_engine/policy/: learned_utility.py
agent-engine/src/agent_engine/simulation/: abstractions.py  engine.py  simulation_state.py  system.py
agent-engine/src/agent_engine/systems/: action_system.py  affect_system.py  causal_graph_system.py  components.py  goal_system.py  identity_system.py  logging_system.py  metrics_system.py  perception_system.py  q_learning_system.py  reflection_system.py
agent-engine/src/agent_engine/tests/simulation/: test_system.py
agent-engine/src/agent_engine/tests/systems/: test_causal_graph_system.py
agent-engine/src/agent_engine/tests/utils/: test_config_utils.py
agent-engine/src/agent_engine/utils/: class_importer.py  config_utils.py  manifest.py  math_utils.py
agent-engine/tests/: conftest.py
agent-engine/tests/cognition/: test_scaffolding.py
agent-engine/tests/cognition/emotions/: test_affect_base.py  test_affect_learning.py  test_appraisal_theory.py  test_model.py
agent-engine/tests/cognition/identity/: test_domain_identity.py
agent-engine/tests/cognition/reflection/: test_episode.py  test_validation.py
agent-engine/tests/simulation/: test_engine.py  test_simulation_state.py  test_system.py
agent-engine/tests/systems/: test_action_system.py  test_affect_system.py  test_causal_graph_system.py  test_goal_system.py  test_identity_system.py  test_q_learning_system.py  test_reflection_system.py
agent-engine/tests/utils/: test_config_utils.py  test_math_utils.py
agent-persist/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
agent-persist/scripts/: concat_files.py
agent-persist/src/agent_persist/: __init__.py  models.py  restore.py  store.py
agent-persist/tests/: test_store.py
agent-sim/: .env.example  .gitignore  Dockerfile  Dockerfile-working  README.md  create.py  docker-entrypoint-working.sh  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
agent-sim/experiments/: emergence_study.yml  test_ablation.yml
agent-sim/src/: main.py
agent-sim/src/agent_sim/: cli.py  main.py
agent-sim/src/agent_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-sim/src/agent_sim/config/: schemas.py
agent-sim/src/agent_sim/infrastructure/data/: async_runner.py
agent-sim/src/agent_sim/infrastructure/database/: async_database_manager.py  init_db.py  models.py
agent-sim/src/agent_sim/infrastructure/logging/: database_emitter.py  mlflow_exporter.py
agent-sim/src/agent_sim/infrastructure/tasks/: celery_app.py  simulation_tasks.py
agent-sim/src/infrastructure/database/: async_database_manager.py  models.py
agent-sim/src/infrastructure/tasks/: simulation_tasks.py
agent-sim/src/simulations/soul_sim/: components.py  providers.py  world.py
agent-sim/src/simulations/soul_sim/scenarios/: default.json
agent-sim/src/simulations/soul_sim/systems/: combat_system.py  decay_system.py  failed_states_system.py  movement_system.py  nest_system.py  render_system.py  resource_system.py  (+1 more)
agent-sim/tests/: conftest.py
agent-sim/tests/infrastructure/data/: test_async_runner.py
agent-sim/tests/infrastructure/tasks/: test_simulation_tasks.py
simulations/soul_sim/: README.md  component_factory.py  components.py  providers.py  pyproject.toml  run.py  world.py
simulations/soul_sim/actions/: action_utils.py  combat_action.py  communicate_action.py  extract_action.py  flee_action.py  move_action.py  nest_action.py  reflect_action.py
simulations/soul_sim/config/: base_config.yml  schemas.py
simulations/soul_sim/config/schemas/: __init__.py  agent.py  environment.py  learning.py  llm.py  simulation.py
simulations/soul_sim/environment/: grid_world.py  resources.py
simulations/soul_sim/metrics/: vitals_calculator.py
simulations/soul_sim/scenarios/: default.json
simulations/soul_sim/simulation/: action_generator.py  decision_selector.py  narrative_provider.py  reward_calculator.py  scenario_loader.py  state_encoder.py
simulations/soul_sim/systems/: combat_system.py  decay_system.py  failed_states_system.py  movement_system.py  nest_system.py  render_system.py  resource_system.py  social_interaction_system.py
simulations/soul_sim/tests/: conftest.py  test_combat_system.py  test_component_factory.py  test_scenario_loader.py  test_social_interaction_system.py  test_systems.py
simulations/soul_sim/tests/systems/: test_combat_system.py  test_decay_system.py  test_movement_system.py  test_nest_system.py  test_resource_system.py  test_social_interaction_system.py  utils.py
(+284 files in other folders)
