# arla/pyproject.toml (The single, unified file)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arla-monorepo-workspace"
version = "0.1.0"
description = "A modular, scalable framework for running multi-agent simulations with affective reflective learning."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "your@email.com" }]

# All production dependencies for the entire project are listed here.
# The local packages are listed first, followed by all third-party libraries.
dependencies = [
    # Local Packages
    "agent-core @ file:./agent-core",
    "agent-engine @ file:./agent-engine",
    "agent-concurrent @ file:./agent-concurrent",
    "agent-persist @ file:./agent-persist",
    "agent-sim @ file:./agent-sim",

    # Third-Party Libraries
    "celery[redis]==5.3.4",
    "redis>=4.3.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.8.0",
    "asyncpg",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "scikit-learn>=1.1.0",
    "torch",
    "matplotlib>=3.5.0",
    "seaborn",
    "networkx",
    "openai",
    "python-dotenv>=0.19.0",
    "imageio>=2.19.0",
    "uvicorn>=0.18.0",
    "fastapi>=0.85.0",
    "mlflow",
]

[project.optional-dependencies]
# All development dependencies are consolidated here.
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "flower>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/renbytes/arla" # Example URL
"Bug Tracker" = "https://github.com/renbytes/arla/issues"

# --- UNIFIED TOOL CONFIGURATION ---

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "C90", "B"]
ignore = ["B905"] # Allows using zip without strict=True
# Define excludes once at the root level
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv/",
    ".pytest_cache/",
    "notebooks/"
]

[tool.mypy]
# The 'mypy_path' key has been removed. It's not needed.
exclude = [
    "tests/",
    "agent-sim/",
]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

# The pythonpath points to all the different 'src' directories
mypy_path = [
  "agent-core/src",
  "agent-engine/src",
  "agent-concurrent/src",
  "agent-persist/src",
  "agent-sim/src"
]

# A single place to ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "networkx.*",
    "omegaconf.*",
    "openai.*",
    "python_dotenv.*",
    "pandas.*",
    "scipy.*",
    "imageio.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Define all test paths and the python path for the entire monorepo
pythonpath = [
  "agent-core/src",
  "agent-engine/src",
  "agent-concurrent/src",
  "agent-persist/src",
  "agent-sim/src"
]
testpaths = [
    "agent-core/tests",
    "agent-engine/tests",
    "agent-concurrent/tests",
    "agent-persist/tests",
    "agent-sim/tests",
]
asyncio_mode = "auto"
addopts = "--tb=short -v"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
