[tool.poetry]
name = "arla"
version = "0.1.0"
description = "A modular, scalable framework for running multi-agent simulations with affective reflective learning."
authors = ["Bordumb <bordumbb@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/renbytes/arla"
repository = "https://github.com/renbytes/arla"
documentation = "https://github.com/renbytes/arla"

# Expose all packages from their src/ directories
[[tool.poetry.packages]]
include = "agent_sim"
from = "agent-sim/src"

[[tool.poetry.packages]]
include = "agent_core"
from = "agent-core/src"

[[tool.poetry.packages]]
include = "agent_engine"
from = "agent-engine/src"

[[tool.poetry.packages]]
include = "agent_persist"
from = "agent-persist/src"

[[tool.poetry.packages]]
include = "agent_concurrent"
from = "agent-concurrent/src"

[tool.poetry.scripts]
# Provide BOTH names so your Makefile (agentsim) and any previous docs (arla) work
agentsim = "agent_sim.main:app"
arla = "agent_sim.main:app"

[tool.poetry.dependencies]
python = "==3.11.9"

# Local path deps (editable)
agent-core = { path = "agent-core", develop = true }
agent-engine = { path = "agent-engine", develop = true }
agent-concurrent = { path = "agent-concurrent", develop = true }
agent-persist = { path = "agent-persist", develop = true }
agent-sim = { path = "agent-sim", develop = true }

# Third Party
celery = { extras = ["redis"], version = "==5.3.4" }
redis = ">=4.3.0"
hydra-core = ">=1.3.2"
omegaconf = ">=2.3.0"
sqlalchemy = ">=2.0.0"
greenlet = "*"
alembic = ">=1.8.0"
asyncpg = "*"
psycopg2-binary = ">=2.9.0"
pydantic = ">=2.0.0"
pandas = ">=1.4.0"
numpy = ">=1.21.0"
scipy = ">=1.8.0"
scikit-learn = ">=1.1.0"
torch = "*"
matplotlib = ">=3.5.0"
seaborn = "*"
networkx = "*"
openai = "*"
python-dotenv = ">=0.19.0"
imageio = ">=2.19.0"
uvicorn = ">=0.18.0"
fastapi = ">=0.85.0"
mlflow = "*"
dowhy = "*"
pygraphviz = "*"
rich = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
ruff = "==0.12.3"
mypy = "==1.16.1"
pytest-cov = "*"
coverage = { extras = ["toml"], version = "*" }
pre-commit = "*"
flower = ">=2.0.0"
maturin = ">=1.5,<2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
mkdocs-rss-plugin = ">=1.12.0"
mkdocs-autorefs = ">=0.5.0"
mkdocstrings = {extras = ["python"], version = ">=0.24.0"}

[build-system]
requires = ["poetry-core", "maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "agent-concurrent/rust/Cargo.toml"
module-source = { agent_concurrent_core = "arla_core_rs" }
