[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-concurrent"
version = "0.1.0"
description = "A library for concurrent and parallel execution of agent-based simulation systems."
# This package has no external dependencies.

[tool.setuptools.packages.find]
where = ["src"]
