[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engine"
version = "0.1.0"
description = "The world-agnostic simulation engine for ARLA."
dependencies = [
    # Dependencies from PyPI
    "numpy",
    "omegaconf",
    "torch",
    "scikit-learn",
    # Local monorepo dependencies
    "agent-core",
    "agent-concurrent",
    "agent-persist"
]

[tool.setuptools.packages.find]
where = ["src"]
