[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-persist"
version = "0.1.0"
description = "A library for persisting and restoring agent simulation states using Pydantic."
dependencies = [
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]
