[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sim"
version = "0.1.0"
description = "The main simulation application for the ARLA project."
dependencies = [
    # External PyPI packages
    "hydra-core",
    "pydantic",
    "celery",
    "redis",
    "mlflow",
    "sqlalchemy",
    "asyncpg",
    "imageio",
    "matplotlib",
    "typer[all]",
    "rich",

    # Local monorepo packages
    "agent-core",
    "agent-engine",
    "agent-concurrent",
    "agent-persist"
]

# Script Entry Point
# This makes CLI runnable after installation.
[project.scripts]
agentsim = "agent_sim.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
