[tool.poetry]
name = "agent-sim"
version = "0.1.0"
description = "The main simulation runner and application package for ARLA."
authors = ["Your Name <your@email.com>"]
packages = [{include = "agent_sim", from = "src"}]

[tool.poetry.dependencies]
python = "==3.11.9"
# Most dependencies are managed by the root pyproject.toml,
# so this can be kept minimal.

[tool.poetry.scripts]
# This correctly defines the script as part of the agent-sim package
arla-sim = "agent_sim.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"