# FILE: agent-sim/pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sim"
version = "0.1.0"
description = "A demo project that plugs a custom world into the ARLA cognitive engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "hydra-core",
    "pydantic",
    "celery",
    "redis",
    "mlflow",
    "sqlalchemy",
    "asyncpg",
    "imageio",
    "matplotlib",
    "typer[all]",
    "rich",
    "agent-core",
    "agent-engine",
    "agent-concurrent",
    "agent-persist",
]

[project.scripts]
# This is the crucial part that creates the 'agentsim' command-line tool.
# It links the command 'agentsim' to the 'app' function in your 'agent_sim/cli.py' file.
agentsim = "agent_sim.cli:app"

[tool.setuptools.packages.find]
where = ["src"]