# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-sim"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A detailed agent-based simulation exploring emergent behaviors."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Add your project's direct dependencies here
dependencies = [
    "hydra-core",
    "numpy",
    "torch",
    "pydantic",
    "sqlalchemy",
    "agent-core @ file:///path/to/your/local/arla/agent-core",
    "agent-engine @ file:///path/to/your/local/arla/agent-engine",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
